@@ -1,3 +1,7 @@
+2001-11-04 Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * Query.pm: Added Proxy method
+        
 2001-11-02 Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Pre-alpha release, not for general distribution.
